docs: copyedit all GraphQL tutorial sections for clarity
Apply Strunk's Elements of Style across graphqlintro, graphqlbasic,
graphqlschema, graphqlsearch, and graphqlmoredata sections. Cut
throat-clearing, replace passive voice with active, fix garbled
sentences, parallel construction in lists, and omit needless words
throughout. Fix typos (ids->IDs, double words, pronoun agreement).

--- a/content/graphqlbasic/1.md
+++ b/content/graphqlbasic/1.md
@@ -9,21 +9,19 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-{{% notice "note" %}} For the following queries to run, you should have
-completed the introduction to setup your backend, define your schema, and insert
-the sample data. To learn more, see the [GraphQL tour introduction]({{< relref "intro/1" >}}). {{% /notice %}}
+{{% notice "note" %}} These queries require the introduction steps: setting up
+your backend, defining your schema, and inserting sample data. See the
+[GraphQL tour introduction]({{< relref "intro/1" >}}). {{% /notice %}}
 
-Let’s have a look at a "hello world" query in GraphQL.
+Here is a "hello world" query in GraphQL.
 
-Each query has at least one named root function, and query results are labeled
-accordingly.
+Each query has at least one named root function, and results carry matching
+labels.
 
-Dgraph generates these functions based on a schema that you provide. In the
-[GraphQL tour introduction]({{< relref "intro/1" >}}), we looked at an example
-schema that consisted of two types: `Person` and `Animal`. For each type, Dgraph
-can generate three GraphQL queries, `get<Type>`, `query<Type>`, and
-`aggregate<Type>`. So, from the two types we provided Dgraph generated the
-following queries:
+Dgraph generates these functions from your schema. The
+[GraphQL tour introduction]({{< relref "intro/1" >}}) defined two types:
+`Person` and `Animal`. For each type, Dgraph generates three queries --
+`get<Type>`, `query<Type>`, and `aggregate<Type>` -- producing the following:
 
 - `getPerson`
 - `queryPerson`
@@ -32,42 +30,32 @@ following queries:
 - `queryAnimal`
 - `aggregateAnimal`
 
-The `getPerson` and `getAnimal` queries require an input identifying the single
-node of that type to return. If you are new to graph databases, think of GraphQL
-types as similar to tables, and think of nodes as similar to table rows (or
-records). The `queryPerson` and `queryAnimal` queries return all of the nodes of
-that type (by default). These queries can be provided inputs to filter, order,
-and paginate through query results. The `aggregatePerson` and `aggregateAnimal`
-queries return aggregated calculations but do not return the results (nodes)
-themselves. The most common use cases for aggregate queries is to count the
-number of nodes. Aggregate queries can accept a filter argument to aggregate a
-filtered selection of nodes.
+`getPerson` and `getAnimal` require an identifier for a single node. If you
+are new to graph databases, think of types as tables and nodes as rows.
+`queryPerson` and `queryAnimal` return all nodes of that type by default; you
+can filter, order, and paginate the results. `aggregatePerson` and
+`aggregateAnimal` return aggregate calculations without returning nodes
+themselves. The most common aggregate use case is counting nodes. Aggregate
+queries accept a filter argument to aggregate a subset of nodes.
 
-Dgraph identifies each node with a unique internal id, its `UID`. This `UID` can
-be mapped to a field in the GraphQL schema by using the `ID` scalar. In the
-GraphQL schema, Dgraph also provides a mechanism for referencing nodes by
-external ids, `XID`. You can map an `XID` to a field in the schema by using the
-`@id` directive. In our example schema, we mapped the UID to the `id` field and
-the XID to the `xid` field of each type. You do not need to use either of these
-to perform `query<Type>` queries, but to use the `get<Type>` queries you will
-need to use at least one of these id mechanisms. Because Dgraph maps between
-UIDs and XIDs, you can use `get<Type>` queries with either of these identifying
-fields.
+Dgraph assigns each node a unique internal identifier, its UID. The `ID` scalar
+maps this UID to a schema field. Dgraph also supports external identifiers
+(XIDs) through the `@id` directive. Our example schema maps the UID to the `id`
+field and the XID to the `xid` field of each type. `query<Type>` queries need
+neither identifier, but `get<Type>` queries require at least one. Because Dgraph
+maps between UIDs and XIDs, `get<Type>` queries work with either field.
 
-You select fields for your query by providing a list of desired fields in your
-GraphQL query syntax. In our example query, we request the `id`, `xid`, `name`,
-and `age` fields. For any field that does not have a set value, `null` is
-returned.
+Select fields by listing them in your query. The example requests `id`, `xid`,
+`name`, and `age`. Fields without a set value return `null`.
 
-Run the query example provided here to see the results returned.
+Run the example query to see the results.
 
-You will see right away that the results are in JSON format and take the same
-shape as the query itself.
+The results use JSON format and mirror the query structure.
 
-Something to try: Change the query to select someone else. You can check the
-[sample data](../../graphqlintro/4) again.
+Something to try: Change the query to select a different person. Check the
+[sample data](../../graphqlintro/4) for reference.
 
-{{% expandable %}} Find an `xid` in the data, and then try the following:
+{{% expandable %}} Find an `xid` in the data, then try the following:
 
 ```
 {
@@ -79,7 +67,7 @@ Something to try: Change the query to select someone else. You can check the
 }
 ```
 
-Or, look at the `UID`s in the responses and try the following:
+Or look at the UIDs in the responses and try the following:
 
 ```
 {
@@ -102,9 +90,8 @@ Or, try to get an animal instead with the following:
 }
 ```
 
-You can edit these queries and try whatever you like. When there are answers
-like this, you can copy and paste them into the query panel, and then edit and
-run them. {{% /expandable %}}
+You can edit these queries freely. Copy and paste any answer into the query
+panel, then edit and run it. {{% /expandable %}}
 
-The tutorial covers connecting the client to the GraphQL API, so just focus on
-the query syntax for now.
+The tutorial covers client-to-API connection later; focus on query syntax for
+now.
