--- a/content/graphqlbasic/10.md
+++ b/content/graphqlbasic/10.md
@@ -10,33 +10,23 @@ type = "graphql"
 
 +++
 
-Given what you've seen so far, you've probably already understood this, but it's
-worth going over.
+Dgraph graphs can be enormous, so starting a search from all nodes is
+inefficient. Every search begins from a root query function.
 
-The graphs in Dgraph can be huge, so starting your search from all nodes isn't
-always efficient. Dgraph needs a place to start searching, and you choose this 
-by starting your search from a root query function.
+Root query functions like `query<type>` or `get<type>` find an initial set of
+nodes. This tour has mainly used `getPerson`, but `queryPerson` searches all
+nodes of type `Person`.
 
-For example, you can use the root query functions with names like `query<type>`
-or `get<type>` to find an initial set of nodes. So far, you have mainly used the
-`getPerson` root query function in this tour operations, but you can also search
-through all of the nodes having the type 'Person' by using `queryPerson`.
+The `@search` directive in the schema tells Dgraph to generate filter arguments
+and build an index on searchable values. Without `@search` directives, Dgraph
+cannot generate filter arguments or create indexes. Without an index, Dgraph
+must scan all nodes of a type to find matches, degrading query performance.
 
-Dgraph relies on the `@search` directive in the schema to generate filter
-arguments and build an index on values that are to be searched. Without these
-@search directives, Dgraph would not know to generate the filter arguments or
-create an index to make the search more efficient. Without an index, Dgraph would
-have to trawl through all of the nodes of a type to find matching values, which
-would impact query efficiency.
+From the root query's matched nodes, Dgraph follows predicates and edges to
+satisfy the rest of the query. Filters inside nested blocks apply only to nodes
+reached by following the listed edges.
 
-From the set of nodes matched in the root query function, Dgraph then follows
-predicates and edges to satisfy the remainder of the query. The filters on
-blocks inside the root are only applied to the nodes reached by following listed
-edges to them.
-
-In the example we have provided, the query searches for all people in their 30's,
-and then finds their friends that have an `xid` equal to 'bob'. Given our small
-dataset and the simple search parameters, it may not be very evident, but if the
-dataset was very large we would see the efficiency of only searching for friends
-of people in their 30's as the first step, instead of searching for all people
-in the dataset with both steps.
+The example query searches for all people in their 30s, then finds their friends
+with `xid` equal to "bob." With a small dataset this efficiency gain is subtle,
+but on a large dataset, searching only among friends of people in their 30s --
+rather than all people -- makes a significant difference.
