--- a/content/graphqlbasic/12.md
+++ b/content/graphqlbasic/12.md
@@ -10,12 +10,11 @@ type = "graphql"
 
 +++
 
-The output graph can rename fields in the output using aliases.
+Aliases rename fields in the query output.
 
-Aliases are useful when you want to apply two different filters to the same edge.
-The example query that's provided for you in the editor uses aliases to
-include the `friends` edge twice, with a unique set of arguments and fields
-in each case.
+Aliases are useful when applying two different filters to the same edge. The
+example query uses aliases to include the `friends` edge twice, each with a
+unique set of arguments and fields.
 
 **Something to try**: Query `People`, then select and alias the `xid` field as
 `username` and alias the query as `users`. Then, query all people again, filtering
