--- a/content/graphqlbasic/13.md
+++ b/content/graphqlbasic/13.md
@@ -9,12 +9,10 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-The `@cascade` directive removes any nodes from query results that don't have
-all fields included in the query. You can also use the `@cascade` directive to
-remove nodes from query results where a filter inside a block returns no results.
+The `@cascade` directive removes nodes that lack all fields included in the
+query. It also removes nodes where a filter inside a block returns no results.
 
-In the following query, Dgraph returns all of Alice's friends, whether or not
-they own a pet:
+The following query returns all of Alice's friends, regardless of pet ownership:
 
 ```
 {
@@ -31,8 +29,7 @@ they own a pet:
 }
 ```
 
-With the `@cascade` directive, friends of Alice that don't own a pet are not
-included in the result, as follows:
+With `@cascade`, friends of Alice who own no pet are excluded:
 
 ```
 {
@@ -49,9 +46,9 @@ included in the result, as follows:
 }
 ```
 
-You can get the same query result more efficiently by using
-the `has` filter argument. However, you can't use the `has` argument to return the
-desired results in queries that filter on an edge, or with deeper queries.
+The `has` filter argument achieves the same result more efficiently in this case.
+However, `has` cannot produce the desired results in queries that filter on a
+specific edge value or traverse deeper levels.
 
 **Something to try**: Return Alice's friends that own the animal with an `xid` equal
 to "goldie".
@@ -75,10 +72,10 @@ to "goldie".
 
 {{% /expandable %}}
 
-Putting the cascade directive at different levels in the subgraph applies the
-cascade effect from that level down.
+Placing the cascade directive at different levels applies the cascade effect
+from that level downward.
 
-Compare the responses returned by this query in the following three subgraphs:
+Compare the responses from these three subgraphs:
 
 ```
 {
@@ -115,5 +112,5 @@ Compare the responses returned by this query in the following three subgraphs:
 }
 ```
 
-To learn more about the `@cascade` directive, see the Dgraph documentation site:
-https://docs.dgraph.io/graphql/queries/cascade/
+For more on the `@cascade` directive, see the
+[Dgraph documentation](https://docs.dgraph.io/graphql/queries/cascade/).
