--- a/content/graphqlbasic/15.md
+++ b/content/graphqlbasic/15.md
@@ -9,11 +9,9 @@ courseName = "Basic"
 completed = 1
 +++
 
-You’ve finished this module!
+You have finished this module!
 
-You can use what you learned in this module to query graphs, filter the output, and
-sort and paginate the results using the generated GraphQL API provided by
-Dgraph.
+You can now query graphs, filter output, and sort and paginate results using
+Dgraph's generated GraphQL API.
 
-Check out the list of sections again, go back and review anything that wasn't
-clear, or continue to the next module.
+Review any section that needs clarification, or continue to the next module.
