--- a/content/graphqlbasic/2.md
+++ b/content/graphqlbasic/2.md
@@ -9,20 +9,17 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-The last query returned some data, but the result wasn’t very interesting, nor
-did it teach us much about graphs.
+The last query returned data, but revealed little about graphs.
 
-In Dgraph and GraphQL, queries return graphs, not tables or lists of data.
+In Dgraph and GraphQL, queries return graphs, not tables or lists.
 
-A query is executed against a graph and the result is a subset of the queried
-graph.
+A query executes against a graph and returns a subset of it.
 
-Let’s improve the query to return Alice, along with her network of friends. Run
-the query to see the results.
+The next query returns Alice along with her network of friends. Run the query
+to see the results.
 
-In the results you will notice that the graph contains the age of Alice, but
-does not include the age of any of Alice's friends. This is because we only
-requested this field for Alice and not on the nodes found on the friends edge.
+The results include Alice's age but omit her friends' ages, because the query
+requested `age` only for Alice, not for nodes on the `friends` edge.
 
 **Something to try**: Alice also owns a pet, find it and its `name`. The
 `ownsPets` edge can help you here.
