--- a/content/graphqlbasic/5.md
+++ b/content/graphqlbasic/5.md
@@ -9,12 +9,12 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-Nodes are filtered based on functions applied to the node's outgoing edges.
+Functions applied to outgoing edges filter nodes.
 
-So far, the queries have only applied a filter to the top level nodes using the
-`getPerson` function, but you can apply filters to any edge in the query.
+Previous queries filtered only top-level nodes using the `getPerson` function,
+but you can apply filters to any edge in a query.
 
-Dgraph has many functions available for filtering results, including the following:
+Dgraph provides many filter functions, including:
 
 - `fieldName: { allofterms: "term1 ... termN" }`: matches nodes with an outgoing
   `string` field `fieldName` where the string contains all listed terms
@@ -31,12 +31,12 @@ Dgraph has many functions available for filtering results, including the followi
   - `fieldName: { gt: value }`: greater than
   - `fieldName: { lt: value }`: less than
 
-In addition to these capabilities, you can filter on regular expressions, use
-full text search, or use geographic (geo) search.
+You can also filter on regular expressions, full text search, or geographic
+(geo) search.
 
-These filter functions are applied as arguments on fields in the GraphQL syntax.
-Dgraph only generates these arguments on fields that have the proper search
-directive applied for indexing.
+These filter functions appear as arguments on fields in GraphQL syntax. Dgraph
+generates these arguments only for fields with the proper `@search` directive
+for indexing.
 
 **Something to try**: You can query all people under the age of 30, along with
 the name of their pets. (**Hint**: use a filter argument with the `queryPerson` root
