--- a/content/graphqlbasic/6.md
+++ b/content/graphqlbasic/6.md
@@ -12,8 +12,8 @@ type = "graphql"
 The logical connectives `and`, `or` and `not` combine multiple functions in a
 filter.
 
-When you provide multiple parameters in a filter argument they are combined
-with `and` logic by default, as in the following example:
+Multiple parameters in a single filter argument combine with `and` logic by
+default:
 
 ```
 {
@@ -30,8 +30,8 @@ with `and` logic by default, as in the following example:
 }
 ```
 
-With GraphQL, each parameter of an argument object must be unique. You can wrap
-arguments in logical lists using `and` and `or`, as follows:
+Each parameter in an argument object must be unique. Wrap arguments in logical
+lists using `and` and `or`:
 
 ```
 {
@@ -50,10 +50,9 @@ arguments in logical lists using `and` and `or`, as follows:
 }
 ```
 
-Dgraph generates another GraphQL syntax for joining multiple filter functions
-together with inline `and` and `or` filter parameters. When combining more than two
-filter functions, or using more than a single logical combinator, users might find
-that logical lists provide more easily readable queries.
+Dgraph also generates inline `and` and `or` filter parameters. When combining
+more than two filters or using multiple logical combinators, logical lists
+produce more readable queries.
 
 ```
 {
@@ -69,7 +68,7 @@ that logical lists provide more easily readable queries.
 }
 ```
 
-You can also add inequality filters using the `not` logical combinator, as follows:
+Add inequality filters with the `not` logical combinator:
 
 ```
 {
