--- a/content/graphqlbasic/7.md
+++ b/content/graphqlbasic/7.md
@@ -9,20 +9,19 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-You can sort (or order) query results by using the `order` argument on edges and
-`query<Type>` query functions.
+The `order` argument on edges and `query<Type>` functions sorts query results.
 
-When you apply ordering, the visualization of the graph remains unchanged, but
-the JSON response returned contains an ordered list.
+Ordering leaves the graph visualization unchanged but orders the JSON response
+list.
 
 The generated `<type>Order` input type accepts three arguments:
 
-- `asc` - Sort by a field in ascending order
-- `desc` - Sort by a field in descending order, and
-- `then` - Add an additional sort argument.
+- `asc` -- sort by a field in ascending order
+- `desc` -- sort by a field in descending order
+- `then` -- add an additional sort argument
 
-In the example query shown in the editor, we query all nodes of
-the type `Person` and sort those nodes by the `name` field in ascending order.
+The example query retrieves all `Person` nodes sorted by `name` in ascending
+order.
 
 **Something to try**: Sort Alice's friends by their age, in descending order;
 and then by their name, in ascending order.
@@ -46,11 +45,11 @@ and then by their name, in ascending order.
 _FYI, This query will fail on Dgraph versions prior to 21.03_
 {{% /expandable %}}
 
-For every type, Dgraph will generate a list of fields that are orderable. Edges
-to other nodes are not orderable fields within a type.
+Dgraph generates a list of orderable fields for every type. Edges to other
+nodes cannot be ordered.
 
-To introspect the available order fields, inspect the generated
-`<type>Orderable` `enum`.
+To discover available order fields, inspect the generated `<type>Orderable`
+`enum`:
 
 ```
 {
