--- a/content/graphqlbasic/8.md
+++ b/content/graphqlbasic/8.md
@@ -9,18 +9,14 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-It's not uncommon to have thousands of results for a query.
-
-But you might want to  paginate the results for display, or limit a large result set.
-
-Dgraph generates `first` and `offset` arguments that can be used in combination
-to achieve such limits and paginate results:
+Queries often return thousands of results. Paginate or limit large result sets
+with the `first` and `offset` arguments:
 
 - `first: N` Return only the first `N` results
 - `offset: N` Skip the first `N` results
 
-By default, query answers are ordered by `uid`. You can change this behavior by
-explicitly [specifying an order]({{< relref "graphqlbasic/8" >}}).
+By default, query results order by `uid`. Override this by
+[specifying an order]({{< relref "graphqlbasic/8" >}}).
 
-The `first` and `offset` arguments are available on `query<Type>` queries and on
-any edge to a list of nodes.
+`first` and `offset` work on `query<Type>` queries and on any edge to a list
+of nodes.
