--- a/content/graphqlbasic/9.md
+++ b/content/graphqlbasic/9.md
@@ -10,19 +10,15 @@ type = "graphql"
 
 +++
 
-You may have noticed that Dgraph generates an `<edgeName>Aggregate` edge for
-every edge pointing to a list. These aggregate edges, along with aggregate
-queries, allow you to count the number of items in a query without the need to
-return every node.
+Dgraph generates an `<edgeName>Aggregate` edge for every edge pointing to a
+list. These aggregate edges, along with aggregate queries, let you count items
+without returning every node.
 
-These aggregate operations return an aggregate result type generated as
-`<type>AggregateResult`. This type provides a unique set of fields for counting
-and finding the minimum, maximum, average, and sum values depending on the types
-in the schema.
+Aggregate operations return a `<type>AggregateResult` type with fields for
+count, minimum, maximum, average, and sum -- varying by schema type.
 
-The example query provided here requests every available field
-from `PersonAggregateResult` to return aggregate results from Alice's
-friends, as follows:
+The example query requests every `PersonAggregateResult` field to return
+aggregates from Alice's friends:
 
 - `count` - count how many friends Alice has
 - `xidMin` - find the minimum xid value sorted alphabetically
@@ -34,13 +30,12 @@ friends, as follows:
 - `ageAvg` - find the average age of Alice's friends
 - `ageSum` - sum of all of the ages of Alice's friends
 
-{{% notice "note" %}} The `<field>Avg` field only averages the values by the
-nodes that have a value set. If you have not altered the data from the
-Introduction, Alice has six friends, but only four of them have an age set. The
-sum age is 113 and the average age across those four nodes is 28.25. {{% /notice %}}
+{{% notice "note" %}} `<field>Avg` averages only nodes that have the value set.
+If you kept the data from the Introduction unchanged, Alice has six friends, but
+only four have an age. The sum is 113 and the average across those four nodes is
+28.25. {{% /notice %}}
 
-To introspect into the schema for the available fields on the aggregate edges
-and queries, try the following:
+To discover the available aggregate fields, try this introspection query:
 
 ```
 {
