--- a/content/graphqlintro/1.md
+++ b/content/graphqlintro/1.md
@@ -8,20 +8,19 @@ course = 1
 courseName = "Introduction"
 +++
 
-Welcome to GraphQL powered by [Dgraph](https://docs.dgraph.io/) database.
+Welcome to GraphQL powered by [Dgraph](https://docs.dgraph.io/).
 
-This interactive tutorial will get you up and running writing queries in GraphQL
-using Dgraph, a high-performance graph database.
+This interactive tutorial teaches you to write GraphQL queries using Dgraph, a
+high-performance graph database.
 
-{{% notice "note" %}} To take a tour of Dgraph using Dgraph Query Language (DQL,
-formerly known as GraphQL+-), please see the [DQL-focused portion of this
-tour]({{< relref "intro/1" >}}). The first five sections of this tour focus
-on using Dgraph with GraphQL. {{% /notice %}}
+{{% notice "note" %}} To use Dgraph Query Language (DQL, formerly GraphQL+-)
+instead, see the [DQL portion of this tour]({{< relref "intro/1" >}}). The
+first five sections focus on using Dgraph with GraphQL. {{% /notice %}}
 
-In this tutorial, you can run queries and mutations. The tutorial will guide you
-from your first graph query to creating more advanced queries.
+You will run queries and mutations, progressing from your first graph query to
+more advanced operations.
 
-After completing this self-contained tutorial, please see the reference material
-available to help you use Dgraph in the [Dgraph Docs](https://docs.dgraph.io).
+For reference material beyond this tutorial, see the
+[Dgraph Docs](https://docs.dgraph.io).
 
-When you are ready to begin, click the **Next** button.
+Click **Next** to begin.
