--- a/content/graphqlintro/2.md
+++ b/content/graphqlintro/2.md
@@ -9,12 +9,11 @@ courseName = "Introduction"
 type = "graphql/schema"
 +++
 
-Dgraph generates a GraphQL API endpoint complete with CRUD operations after
-ingesting a GraphQL schema comprised of types. So, when you upload your schema,
-you already get the ability to perform CRUD operations on instances of each type
-in your schema, without further coding.
+Dgraph generates a complete GraphQL API with CRUD operations from a schema of
+types. Once you upload your schema, you can create, read, update, and delete
+instances of each type without further coding.
 
-The schema provided in the editable code block below defines the types for this
-tutorial. Click **Push** to apply this schema to your local Dgraph instance.
+The editable code block below defines the types for this tutorial. Click
+**Push** to apply this schema to your local Dgraph instance.
 
-To continue this tour, this step is required.
+You must complete this step before continuing.
