--- a/content/graphqlintro/6.md
+++ b/content/graphqlintro/6.md
@@ -9,19 +9,18 @@ course = 1
 courseName = "Introduction"
 +++
 
-A graph database is a database optimized for storing and querying graphs. When
-it comes to relationships, graph databases are much faster than SQL databases.
+A graph database stores and queries graphs. For relationship-heavy data, graph
+databases far outperform SQL databases.
 
-SQL databases get bogged down by graph-like data because following edges means
-joining tables; sometimes big tables. And, the more edges, the more joins, and
-the more data needs to be loaded and processed.
+SQL databases struggle with graph-like data because following edges requires
+joining tables -- sometimes large ones. More edges mean more joins and more data
+to load and process.
 
-In a graph database, the edges are a fundamental structure, so following edges
-occurs in a single lookup making edge-based operations blazingly fast.
+In a graph database, edges are a fundamental structure. Following an edge
+requires a single lookup, making edge-based operations fast.
 
-Dgraph is a graph database that's optimized to store graph data and to query it
-quickly. And, it is horizontally-scalable so it can manage lots of transactions
-against very large graphs.
+Dgraph stores graph data and queries it quickly. It scales horizontally,
+handling heavy transaction loads against large graphs.
 
-With Dgraph, you can store a graph on a single computer with millions of edges,
-or you can store massive graphs that require a whole data center to process.
+Dgraph can store a graph with millions of edges on a single machine, or
+distribute massive graphs across an entire data center.
