--- a/content/graphqlintro/7.md
+++ b/content/graphqlintro/7.md
@@ -8,23 +8,21 @@ course = 1
 courseName = "Introduction"
 +++
 
-Dgraph at its core is a loosely-typed database, and can be used in a NoSQL-like
-schema-less fashion. GraphQL provides a strongly typed API that is served from
-the core of a Dgraph database instance.
+Dgraph is a loosely-typed database at its core and can operate in a NoSQL-like,
+schema-less fashion. GraphQL adds a strongly typed API served from the database
+core.
 
-All other GraphQL databases apply GraphQL as a layer served above the database,
-but starting with Dgraph 20.03, Dgraph brings GraphQL into the core of the
-database itself. Dgraph was developed around DQL's GraphQL-like syntax, so
-integrating native GraphQL was a natural fit.
+Most GraphQL databases layer GraphQL above the database. Since Dgraph 20.03,
+Dgraph embeds GraphQL directly in the database core. Because Dgraph was built
+around DQL's GraphQL-like syntax, native GraphQL integration was a natural fit.
 
-GraphQL provides an API that is:
+The GraphQL API is:
 
 - Strongly typed
 - Simple to query
 - Easy to traverse
-- Flexible to iterate upon
-- Proficient with business logic
-- Capable of 3rd-party data integration
+- Flexible to iterate on
+- Suited for business logic
+- Capable of third-party data integration
 
-The GraphQL API provides an endpoint to ask for exactly what you want and
-provides results that match the shape of your request.
+The GraphQL API endpoint returns results matching the shape of your request.
