--- a/content/graphqlintro/8.md
+++ b/content/graphqlintro/8.md
@@ -9,7 +9,7 @@ courseName = "Introduction"
 completed = 1
 +++
 
-Congratulations, you've finished the first module of the tutorial! By now, you
-should have seen an example mutation and query, and know a little about graphs.
+Congratulations -- you have finished the first module! You have seen example
+mutations and queries, and you understand the basics of graphs.
 
-Let's investigate some graphs and start writing more queries!
+The next module explores graphs further and covers more query techniques.
