--- a/content/graphqlmoredata/1.md
+++ b/content/graphqlmoredata/1.md
@@ -10,25 +10,18 @@ type = "graphql/schema"
 readonly = 1
 +++
 
-OK, we are off to a good start with Dgraph and GraphQL. Now let's see what you
-can do with Dgraph's advanced capabilities; like query aggregation, geo-queries,
-and string querying. To do all of this we need to move from the small datasets 
-that we started with and try out something bigger; much bigger.
+Dgraph offers advanced capabilities: query aggregation, geo-queries, and string
+search. Exploring them requires a larger dataset.
 
-In the Dgraph GitHub repository, you'll find a
-[dataset about movies, directors and actors](https://github.com/dgraph-io/dgraph-benchmarks/blob/main/data/1million.rdf.gz). There's around one million triples in the dataset.
+The Dgraph GitHub repository hosts a
+[dataset of movies, directors, and actors](https://github.com/dgraph-io/dgraph-benchmarks/blob/main/data/1million.rdf.gz)
+containing about one million triples. The tutorial setup already loaded this
+dataset into your local Dgraph instance. We keep the dataset to one million
+triples to keep load time short; Dgraph handles far larger datasets with ease.
 
-You could load this dataset into your Dgraph instance, but we've already done
-that for you as part of the tutorial setup.
+This subset covers roughly 275,195 movies and 63,450 actors drawn from a
+[larger collection](https://github.com/dgraph-io/dgraph-benchmarks/blob/main/data/1million.rdf.gz)
+of about 230,000 actors and 86,000 movies. The subset is incomplete, so your
+favorite movies or actors may be missing.
 
-It's a big database of movies, but it won't trouble Dgraph. It is, however, big
-enough to provide some complex query results.
-
-This dataset is a one-million-triple subset of a
-[larger dataset of movies](https://github.com/dgraph-io/dgraph-benchmarks/blob/main/data/1million.rdf.gz)
-that contains around 230,000 actors and around 86,000 movies.
-
-The movie dataset has been loaded into your local Dgraph instance with the schema
-displayed here to generate the GraphQL API. In this dataset, we have 275,195
-movies and 63,450 actors. This is not meant to be a complete movie dataset, so
-you might find that your favorite movies or actors are missing.
+The schema displayed here generates the GraphQL API for this dataset.
