--- a/content/graphqlmoredata/2.md
+++ b/content/graphqlmoredata/2.md
@@ -11,8 +11,7 @@ type = "graphql"
 playground = 1
 +++
 
-Given the previous lesson's schema, we have provided you here some example
-queries to run.
+Try these queries against the schema from the previous lesson.
 
 ```
 {
