--- a/content/graphqlschema/1.md
+++ b/content/graphqlschema/1.md
@@ -12,23 +12,19 @@ type = "graphql/schema"
 As you saw in an [earlier lesson](../../graphqlintro/3/), Dgraph accepts a
 GraphQL schema comprised of types to generate the GraphQL API.
 
-The GraphQL API is a strictly-typed API. You can only add and query data that
-matches a predefined schema. However, do not let this limitation restrict you
-from iterating on the schema as needed.
+The GraphQL API enforces strict types. You can only add and query data that
+matches a predefined schema, but you can iterate on the schema at any time.
 
-Normally, in GraphQL implementations you would have to define inputs, queries,
-and mutations in the GraphQL schema being deployed. Dgraph generates all of
-these for you. All that you need to do is to define your types.
+Most GraphQL implementations require you to define inputs, queries,
+and mutations in the schema. Dgraph generates all of these from your type
+definitions alone.
 
-For Dgraph to correctly generate the correct GraphQL API, you need to supply the
-complete GraphQL schema with every schema update. This does not mean
-that you need to provide the inputs, queries, and mutations; but it does mean
-that if you leave out a type on a schema update, then that part of the API will
-cease to exist, even though the underlying data remains unchanged.
+Every schema update must include the complete GraphQL schema. You still omit
+inputs, queries, and mutations (Dgraph generates those), but if you leave out a
+type, that part of the API disappears, even though the underlying data remains.
 
-The example schema shown here iterates on our previous schema by adding
-additional fields on the type `Person` and adding the type `Company`. In this
-section, you will learn more about these schema changes and what you can do with
-a more complex schema.
+The example schema here builds on the previous schema by adding fields to the
+`Person` type and introducing the `Company` type. This section explores these
+changes and what a more complex schema enables.
 
 Push this new schema to the server, and then continue to the next step.
