--- a/content/graphqlschema/4.md
+++ b/content/graphqlschema/4.md
@@ -9,39 +9,34 @@ courseName = "Schema"
 type = "graphql/schema"
 +++
 
-In Dgraph, edges are directional. A query can't traverse an edge in reverse.
-Fundamentally, there are two options for querying in both directions:
+In Dgraph, edges are directional. A query cannot traverse an edge in reverse.
+Two options exist for querying in both directions:
 
 - Add the reverse edge to the schema and then add all the reverse edge data.
 - Tell Dgraph to always store the reverse edge using the `@reverse` keyword in
   the DQL schema. (**Not available in the GraphQL schema**)
 
-In the generated GraphQL API, Dgraph provides support for the first option with
-easy-to-use directives. Normally a user would have to define two-way edges by
-creating two edges for each desired bidirectional edge. In the GraphQL schema, a
-user can alternatively provide the `@hasInverse` directive and the generated 
-GraphQL API will ensure that all relationships created or removed from within 
-the API are balanced. This directive only needs to be applied to one end of the
-two-way relationship, but it helps schema readability if this directive is applied
-on both ends of the relationship. `@hasInverse` does the same thing whether it
-is applied on one side, the other side, or both sides of the two-way edge
-relationship.
+Dgraph's generated GraphQL API supports the first option through the
+`@hasInverse` directive. Instead of manually creating two edges for each
+bidirectional relationship, you apply `@hasInverse` and the API keeps both
+directions balanced on every create or delete. You need only apply the directive
+to one end of the relationship, but applying it to both ends improves
+readability. `@hasInverse` behaves the same whether applied to one side, the
+other, or both.
 
-You have already seen this directive in action. In the schema provided in the
-previous lessons, you applied this `@hasInverse` directive between the following
-relationships:
+You already used this directive in the previous lessons, applying `@hasInverse`
+to these relationships:
 
 - `Person.friends` <-> `Person.friends`
 - `Person.ownsPets` <-> `Animal.owner`
 - `Person.employers` <-> `Company.employees`
 - `Person.manages` <-> `Person.manager`
 
-When applying the `@hasInverse` directive, it is required to define the field on
-the opposite side of the edge.
+The `@hasInverse` directive requires you to define the field on the opposite side
+of the edge.
 
-Here is an example of an very simple schema that uses the `@hasInverse`
-directive to create a bidirectional edge between `Person.employers` and 
-`Company.employees`:
+Here is a simple schema that uses `@hasInverse` to create a bidirectional edge
+between `Person.employers` and `Company.employees`:
 
 ```
 type Company {
@@ -52,13 +47,11 @@ type Person {
 }
 ```
 
-You can define a variety of different types of relationships between types in 
-your schema using bidirectional edges: one-to-one (`1:1`), one-to-many (`1:n`), and
-many-to-many (`n:n`). 
+Bidirectional edges support three relationship cardinalities: one-to-one (`1:1`),
+one-to-many (`1:n`), and many-to-many (`n:n`).
 
-To define a `1:1` relationship, do not include the list brackets on either side
-of the relationship. This will ensure that one node only ever points to at most 
-one node on the opposite side of the edge.
+To define a `1:1` relationship, omit list brackets on both sides. Each node then
+points to at most one node on the opposite side of the edge.
 
 ```
 type Person {
@@ -82,9 +75,9 @@ type Office {
 }
 ```
 
-To define a many-to-many (`n:n`) relationship, wrap both sides of the relationship
-in a list. The following examples shows that a `Person` has many roles, and a `Role`
-can belong to many different people.
+To define a many-to-many (`n:n`) relationship, wrap both sides in a list. The
+following example shows that a `Person` has many roles, and a `Role` belongs to
+many people.
 
 ```
 type Person {
@@ -95,9 +88,8 @@ type Role {
 }
 ```
 
-One-to-one and many-to-many relationships can point to the same edge of another
-node. You saw an example of this previously in our social graph schema example,
-where a `Person` can have multiple friends:
+One-to-one and many-to-many relationships can point to the same type. The social
+graph schema demonstrated this with `Person` having multiple friends:
 
 ```
 type Person {
@@ -105,18 +97,17 @@ type Person {
 }
 ```
 
-You can iterate on your existing schema to add or remove these bidirectional
-edges. If you remove one edge or side from a two-way relationship, all of the
-functionality and data will remain for the single-edge relationship.
+You can iterate on your schema to add or remove bidirectional edges. Removing one
+side of a two-way relationship preserves all functionality and data for the
+remaining single-edge relationship.
 
-Even though the GraphQL API will keep edges with `@hasInverse` directives
-balanced, it is possible that the edges will fall out-of-sync when you iterate
-your schema or bypass the GraphQL API to access other Dgraph endpoints. A community member has posted
-[a script that you can run to repair unbalanced inverse relationships](https://discuss.dgraph.io/t/fixing-inverse-relationships/12888).
+The GraphQL API keeps `@hasInverse` edges balanced, but edges can fall
+out-of-sync when you change the schema or bypass the GraphQL API to access other
+Dgraph endpoints. A community member posted
+[a script to repair unbalanced inverse relationships](https://discuss.dgraph.io/t/fixing-inverse-relationships/12888).
 
-**Something to try**: Add a relationship from a `Company` to their mascot `Animal`, and
-add the inverse relationship from the `Animal` to the companies that it
-represents.
+**Something to try**: Add a relationship from a `Company` to its mascot `Animal`,
+and add the inverse relationship from `Animal` to the companies it represents.
 
 {{% expandable %}}
 
