--- a/content/graphqlschema/7.md
+++ b/content/graphqlschema/7.md
@@ -9,16 +9,15 @@ courseName = "Schema"
 type = "graphql"
 +++
 
-Dgraph's generated GraphQL API also provides mutations to delete data from the
-graph. Data can be deleted in the following ways:
+Dgraph's generated GraphQL API provides three ways to delete data from the
+graph:
 
-- Update nodes and remove edges
-- Update nodes and remove predicate values
-- Delete a node with all of its inbound and outbound edges and predicate values.
+- Update a node and remove edges
+- Update a node and remove predicate values
+- Delete a node along with all its inbound and outbound edges and predicate values
 
-To remove an edge from a node, you will need to use the same update mutation
-pattern that you saw in the previous lesson. Except this time,  instead of using
-the `set` argument, you use the `remove` argument.
+To remove an edge from a node, use the same update mutation pattern from the
+previous lesson, but replace the `set` argument with `remove`.
 
 The following example query removes the "manages" and "manager" edges between Alice and Frank:
 
@@ -41,9 +40,9 @@ mutation {
 {{% notice "note" %}} The `update<type>` mutations let you set or remove
 multiple edges and values in a single operation. {{% /notice %}}
 
-The example mutation shown above removes edges between two specific nodes. It's
-also possible to remove edges from one node to all other nodes. The following
-mutation example removes all nodes from the "manages" edge from Alice.
+The mutation above removes edges between two specific nodes. You can also remove
+all edges of a given type from a node. The following mutation removes every
+"manages" edge from Alice.
 
 ```
 mutation {
@@ -54,13 +53,12 @@ mutation {
 }
 ```
 
-Dgraph keeps the deletion of edges balanced (inclusive of both directions) when
-the `@hasInverse` directive is applied, just like it keeps edges balanced when
-creating them. 
+When `@hasInverse` is applied, Dgraph keeps edge deletions balanced in both
+directions, just as it does for edge creation.
 
-To delete predicate values, the syntax is very similar to the above. Instead of
-listing the edges to remove we can provide the value to remove. If the value is
-set to null, then all values are removed for that predicate.
+Deleting predicate values uses similar syntax. Provide the value to remove
+instead of listing edges. Setting the value to null removes all values for that
+predicate.
 
 ```
 mutation {
@@ -76,8 +74,8 @@ mutation {
 }
 ```
 
-To delete a node with all of its predicate values, along with the inbound and
-outbound edges, we need to use the `delete<type>` mutation, as follows:
+To delete a node along with all its predicate values and edges, use the
+`delete<type>` mutation:
 
 ```
 mutation {
@@ -93,10 +91,10 @@ mutation {
 }
 ```
 
-The state of the nodes returned is the representation of the node before the
-deletion was applied, so the return value provides a final record of that data.
+The returned nodes represent their state before deletion, providing a final
+record of that data.
 
-{{% notice "note" %}} When a node is deleted from Dgraph, the xid can be reused,
-but the GraphQL API will not allow the UID to be reused because all UIDs are set
-out of the control to the GraphQL API. It is possible to reuse UIDs if the
-GraphQL is bypassed and mutations are made from other endpoints. {{% /notice %}}
+{{% notice "note" %}} After deleting a node, you can reuse the xid but not the
+UID through the GraphQL API, because the API does not control UID assignment.
+Reusing UIDs requires bypassing the GraphQL API and mutating through other
+endpoints. {{% /notice %}}
