--- a/content/graphqlschema/8.md
+++ b/content/graphqlschema/8.md
@@ -12,10 +12,9 @@ type = "graphql"
 
 Congratulations on completing the schema module.
 
-The Dgraph instance you have running for the tutorial and the lessons in the
-modules so far give you a sandbox to play in. Make whatever queries or changes
-you like until you are comfortable with the material covered so far.
+Your running Dgraph instance serves as a sandbox. Experiment with queries and
+mutations until you feel comfortable with the material.
 
-When you're done, let's move on to learning about the search capabilities of 
-Dgraph's generated GraphQL API. Then, you can delve into some larger datasets with
-GraphQL before taking a look at DQL, Dgraph's query language.
+The next module covers the search capabilities of Dgraph's generated GraphQL
+API. After that, you can work with larger datasets in GraphQL before exploring
+DQL, Dgraph's query language.
