--- a/content/graphqlsearch/3.md
+++ b/content/graphqlsearch/3.md
@@ -9,8 +9,8 @@ courseName = "Search"
 type = "graphql"
 +++
 
-With the `term` index the functions `allofterms` and `anyofterms` find strings
-that match all of the listed terms or any one of the listed terms. Previous
-queries in the tour used these searches.
+With the `term` index, `allofterms` matches strings containing every listed
+term, and `anyofterms` matches strings containing at least one. Previous queries
+in the tour used these searches.
 
 Try both options and note the difference in the query results.
