--- a/content/graphqlsearch/4.md
+++ b/content/graphqlsearch/4.md
@@ -9,26 +9,22 @@ courseName = "Search"
 type = "graphql"
 +++
 
-Regular expressions require the `regexp` search by directive which applies a
-trigram index. A trigram is a substring of three consecutive characters, or runes.
+Regular expressions require the `regexp` search directive, which applies a
+trigram index. A trigram is a substring of three consecutive characters (runes).
 
 The trigrams of "trigram" are: "tri", "rig", "igr", "gra" and "ram".
 
-Valid regular expressions can be converted to a trigram query against a search
-index. Dgraph searches the trigram index for possible matches and then runs
-the full regular expression against the possibles, requiring that at least one
-matching trigram is found.
+Dgraph converts a regular expression into a trigram query, searches the index
+for possible matches, and then evaluates the full regular expression against
+those candidates. At least one trigram must match.
 
-It's a good idea to think carefully about how and whether you want to use regular
-expression queries. The more possible trigrams matched by a query, the more results
-are checked against the full regular expression and the less efficient the query.
-The reverse, however, is also true: The more trigrams enforced by the regular
-expression, the better use Dgraph can make of the index, and the smaller the possible results set.
+Consider regular expression queries carefully. The more trigrams a query matches,
+the more results Dgraph must check against the full expression, reducing
+efficiency. Conversely, the more trigrams the expression enforces, the better
+Dgraph uses the index, and the smaller the candidate set.
 
-Therefore, writing efficient regular expressions generally means making use of
-long substrings and avoiding as much alternate choice as possible.
+Efficient regular expressions use long substrings and minimize alternation.
 
 An optional `i` may follow the final `/` to indicate case insensitive search.
 
-Let's query for lines that match the pattern of three upper case characters
-together.
+The query below finds lines matching three consecutive uppercase characters.
