--- a/content/graphqlsearch/6.md
+++ b/content/graphqlsearch/6.md
@@ -9,17 +9,15 @@ courseName = "Search"
 type = "graphql"
 +++
 
-Full text search is what Google and other search engines do for web pages. It's
-different than term matching because it factors in language, grammar, and tense.
-For example, you will see matches on the search keyword "run" with documents 
-that contain very common strings like "run", "running" and "ran".
+Full-text search works like a search engine: it factors in language, grammar, and
+tense rather than matching terms literally. A search for "run" matches documents
+containing "run", "running", and "ran".
 
-Full text search does not match terms exactly, but instead makes use of the
-following techniques:
+Full-text search relies on two techniques:
 
-- **Stemming**: finding a common base word so differences in tense, plural/singular
-  or other inflection don't prevent a match, and
-- **Stop words**: removing common words such as "and", "or", "it"; along with
- some additional words that occur too often.
+- **Stemming**: reducing words to a common base so that differences in tense,
+  number, or inflection do not prevent a match
+- **Stop words**: removing common words such as "and", "or", and "it", along
+  with other high-frequency words
 
-Change `alloftext` to `allofterms` and note the difference in the results returned.
+Change `alloftext` to `allofterms` and note how the results differ.
