--- a/content/graphqlsearch/7.md
+++ b/content/graphqlsearch/7.md
@@ -9,9 +9,6 @@ courseName = "Search"
 completed = 1
 +++
 
-You’ve finished this module!
+You have finished this module and can now search GraphQL datasets with Dgraph.
 
-You can use what you learned in this module to search GraphQL datasets.
-
-Check out the list of sections again, go back and review anything that wasn't
-clear, or continue to the next module.
+Review any sections that need reinforcement, or continue to the next module.
