--- a/content/graphqlbasic/11.md
+++ b/content/graphqlbasic/11.md
@@ -10,14 +10,11 @@ type = "graphql"
 
 +++
 
-The function `has(edge_name)` returns nodes that have an outgoing edge of the
-given name.
+The `has` filter finds nodes that have an outgoing edge or predicate value of
+the given name.
 
-Dgraph also provides the filter argument `has` to find nodes that have an outgoing
-edge or predicate value.
-
-The query example provided here queries for all people who have friends
-and then returns a count of how many friends they have.
+The example query retrieves all people who have friends, then returns a count
+of each person's friends.
 
 **Something to try**: Query people that have friends and an age, and then count
 their friends that have a set age.
