--- a/content/graphqlbasic/14.md
+++ b/content/graphqlbasic/14.md
@@ -9,10 +9,8 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-Queries can contain comments.
+Queries can contain comments. Anything after `#` on a line is a comment, ignored
+during query processing.
 
-Anything after a hash (`#`) on a line is a comment, and ignored for query processing.
-
-This is helpful for debugging queries and for tutorials that need to explain
-parts of queries in-line, which is what we'll do for the more complex queries that
-you'll encounter later in the tutorial.
+Comments help with debugging and with explaining query parts inline. Later
+lessons use comments to annotate more complex queries.
