--- a/content/graphqlbasic/3.md
+++ b/content/graphqlbasic/3.md
@@ -9,31 +9,31 @@ courseName = "Basic"
 type = "graphql"
 +++
 
-It’s time to talk about data types and scalars.
+Data types and scalars determine how Dgraph stores and queries your data.
 
 ##### Type System
 
-A GraphQL API is a strictly-typed API. Every node is required to have a specific type. A GraphQL API built with Dgraph does some "magic" for you so, when you add data it assigns types, and it makes it easy to filter by types when querying data.
+A GraphQL API is strictly typed. Every node must have a specific type. Dgraph's GraphQL API assigns types when you add data and supports filtering by type when you query.
 
-You might have noticed from [Load Data]({{< relref "graphqlintro/4" >}}) that the data in
-triple format includes a predicate for `<dgraph.type>`. The values from these
-predicates match the GraphQL type definition of the node. If you load the data
-using Bulk Loader, Live Loader, or DQL mutations, you will need to set these
-type predicates if you want the node to be accessible through the GraphQL API.
+You may have noticed from [Load Data]({{< relref "graphqlintro/4" >}}) that data in
+triple format includes a `<dgraph.type>` predicate. These predicate values match
+the GraphQL type definition of the node. If you load data using Bulk Loader,
+Live Loader, or DQL mutations, you must set these type predicates for the node
+to be accessible through the GraphQL API.
 
 ##### Data types and schema
 
-There was some "magic" in the last query because some of the queried
-fields returned a value (`name` and `age`), but some were edges to
-other nodes (`friend` and `ownsPets`) that themselves had further fields.
+The last query contained a subtle distinction: some fields returned values
+(`name` and `age`), while others were edges to other nodes (`friend` and
+`ownsPets`) with their own fields.
 
-The GraphQL schema tells us how to interpret every field. Run the example
-introspection query and have a look at the JSON result.
+The GraphQL schema defines how to interpret every field. Run the example
+introspection query and examine the JSON result.
 
-There are two kinds of fields in a graph: *nodes* and
-*values* (or *literals*).  In the example, nodes representing people have
-a `name` field with a `string` value and an `age` field to an `int` value. They also
-have edges that connect to other nodes. A value can’t have any edges coming out of it.
+A graph contains two kinds of fields: *nodes* and *values* (or *literals*). In
+the example, person nodes have a `name` field with a `string` value and an `age`
+field with an `int` value. They also have edges connecting to other nodes. A
+value cannot have edges coming out of it.
 
 Here are the types available to store values in Dgraph:
 
@@ -51,6 +51,6 @@ Here are the types available to store values in Dgraph:
 |  `Polygon`  | Geolocation types (see [docs](https://docs.dgraph.io/graphql/schema/types/#geolocation-types)) |
 |  `MultiPolygon` | Geolocation types (see [docs](https://docs.dgraph.io/graphql/schema/types/#geolocation-types)) |
 
-The schema tells us the Person type has a `friends` field that goes from one node of type `Person` to another node (also of type `Person`) but not to a value.
+The schema declares that the `Person` type has a `friends` field pointing from one `Person` node to another -- not to a value.
 
-There's a lot more to learn about schemas [later in the tutorial]({{< relref "schema/1" >}}).  For now, though, you know enough about schemas to better understand the structure of our graph and the types of nodes and values included in its dataset.
+Later sections cover schemas in depth ([see the schema module]({{< relref "schema/1" >}})). For now, you know enough to understand our graph's structure and the types of its nodes and values.
