--- a/content/graphqlbasic/4.md
+++ b/content/graphqlbasic/4.md
@@ -10,19 +10,16 @@ type = "graphql"
 
 +++
 
-GraphQL query results are graphs; in fact, the query result is structured like
-the query.
+GraphQL query results are graphs, structured to mirror the query itself.
 
-The braces in a query like `<edge name> { ... }` signify nested blocks, where the
-edges inside the block are matched against nodes found by following the edge
-that begins the block.
+The braces in `<edge name> { ... }` define nested blocks. Edges inside a block
+match nodes found by following the edge that begins the block.
 
-We continue nesting the query as we follow edges from node to node. While not
-strictly required, it’s good style to indent the query.
+Nesting continues as you follow edges from node to node. Indenting the query
+improves readability.
 
-Compare the JSON result to the structure of the query and note, for example,
-that the `friend` edge matched a number of nodes and each is represented in the
-JSON shown below.
+Compare the JSON result to the query structure. The `friend` edge matched
+several nodes, each represented in the JSON output.
 
 **Something to try**: Query to get a list of Alice’s friends' pets, or Alice's friends'
 friends.
@@ -67,8 +64,7 @@ Query Alice's friends' friends:
 
 {{% /expandable %}}
 
-In these examples, you'll see that you formulate a query as a traversal through
-a graph, following edges to the desired data. The `id`'s in the JSON output
-allows for interpretation as a graph rather than a tree. Because the output 
-is a graph rather than a tree, you will see some cycles (or repeated nodes) in
-the query for Alice's friends' friends.
+These examples show that a query is a traversal through a graph, following edges
+to the desired data. The IDs in the JSON output allow you to interpret the
+result as a graph rather than a tree. Because the output forms a graph, the
+query for Alice's friends' friends may contain cycles (repeated nodes).
