--- a/content/graphqlintro/3.md
+++ b/content/graphqlintro/3.md
@@ -9,12 +9,10 @@ courseName = "Introduction"
 type = "graphql"
 +++
 
-You can load data into a Dgraph database with GraphQL mutations.
+GraphQL mutations load data into a Dgraph database.
 
-To load the small dataset that we have provided for your use in the upcoming
-lessons, run the mutations that we have provided by clicking **Run**.
+Click **Run** to load the small dataset used in the upcoming lessons.
 
-For the consistency of mutations and queries in this tutorial we use an `xid`
-field to identify nodes. We could have not used the `xid` field and relied
-solely upon the `id` field with the scalar type `ID`, but assigned `ids` will
-vary across instances.
+This tutorial uses an `xid` field to identify nodes for consistency across
+mutations and queries. The `id` field with scalar type `ID` would also work,
+but assigned IDs vary across instances.
