--- a/content/graphqlintro/5.md
+++ b/content/graphqlintro/5.md
@@ -9,19 +9,17 @@ course = 1
 courseName = "Introduction"
 +++
 
-So far in this tour, you have set up a Dgraph instance and run a few
-mutations to edit data. But before proceeding further, you'd probably like to
-understand some basics, like: What is a graph, and what does it have to do with
-databases?
+You have set up a Dgraph instance and run mutations to edit data. Before
+proceeding, consider this question: What is a graph, and what does it have to
+do with databases?
 
-Graphs describe objects and the interconnections between them. You may have
-heard of friendship or social network graphs, where data points
-(people) are connected together through known relationships.
+Graphs describe objects and the connections between them. Social network graphs,
+for example, connect people through known relationships.
 
-Press **Run** on the query to the right. The JSON shown in the query response
-shows just such a social network graph, expressed as JSON.
+Press **Run** on the query to the right. The JSON response represents a social
+network graph.
 
-Graphs aren't just for social networks, other examples include:
+Graphs extend far beyond social networks:
 
 - Interconnected data, like SQL tables requiring joins
 - Advanced search
@@ -32,4 +30,4 @@ Graphs aren't just for social networks, other examples include:
 - Structures of firms or markets
 - Modeling of geographic or 3D objects
 
-These and many more applications make graphs a natural choice for databases.
+These applications and many others make graphs a natural fit for databases.
