--- a/content/graphqlmoredata/3.md
+++ b/content/graphqlmoredata/3.md
@@ -9,21 +9,20 @@ courseName = "Search"
 completed = 1
 +++
 
-Congratulations on completing the GraphQL tutorial portion of the Dgraph Tour!
-
-You should now be able to load a schema into Dgraph's GraphQL API and perform
-basic queries and mutations on it.
+Congratulations -- you have completed the GraphQL tutorial portion of the Dgraph
+Tour! You can now load a schema into Dgraph's GraphQL API and perform queries
+and mutations against it.
 
 #### Where to go from here
 
-- You can find more in-depth details in Dgraph's
-  [GraphQL API Documentation](https://docs.dgraph.io/graphql/).
-- See [Deploy and Manage Documentation](https://docs.dgraph.io/admin/) to learn
-  how you can run Dgraph in your own environment.
-- Take [Dgraph's DQL Tour]({{< relref "intro/1" >}}) to learn
-  Dgraph Query Language (DQL), which runs underneath the GraphQL API of Dgraph.
+- Read the [GraphQL API Documentation](https://docs.dgraph.io/graphql/) for
+  full details.
+- See the [Deploy and Manage Documentation](https://docs.dgraph.io/admin/) to
+  run Dgraph in your own environment.
+- Take [Dgraph's DQL Tour]({{< relref "intro/1" >}}) to learn Dgraph Query
+  Language (DQL), which powers the GraphQL API.
 
 ### Join the community
 
-Please join me on [Discuss](https://discuss.dgraph.io/) for questions, issues,
-feature requests, and discussions.
+Join us on [Discuss](https://discuss.dgraph.io/) for questions, issues, and
+feature requests.
