--- a/content/graphqlschema/2.md
+++ b/content/graphqlschema/2.md
@@ -9,18 +9,16 @@ courseName = "Schema"
 type = "graphql"
 +++
 
-Now that you have updated the schema in the previous step, you can use the new
-*mutations* created by the GraphQL API to add data. Making changes to the graph
-stored in a GraphQL dataset is called mutating the data.
+The schema update from the previous step created new *mutations* in the GraphQL
+API. Use these mutations to add data. In GraphQL, changing the stored graph is
+called mutating the data.
 
-If you had a large amount of data to load after updating a GraphQL schema, it
-might be better to use the Live Loader and add the data as RDF triples. To see
-an example of GraphQL data mapped to RDF triples, see [Intro - Load Data](../../graphqlintro/4)
-in the previous lesson.
+To load large amounts of data after updating a GraphQL schema, use the Live
+Loader to add data as RDF triples. For an example of GraphQL data mapped to RDF
+triples, see [Intro - Load Data](../../graphqlintro/4).
 
-You may notice if you go much further that you have no defined way to uniquely
-identify a company. The best you can do with your current schema is to query for
-companies and filter based on their industry, as follows:
+The current schema provides no way to uniquely identify a company. The best
+available approach is to query companies and filter by industry:
 
 ```
 {
@@ -39,12 +37,10 @@ companies and filter based on their industry, as follows:
 }
 ```
 
-Because the schema doesn't define a unique identifier for the `Company` type,
-Dgraph doesn't generate the `getCompany` query for you. Also, you might notice
-that if you try to run the original mutation again to add companies, then
-duplicate companies are created, but not duplicate people. This is because
-people have `xid` as a unique identifier, but companies don't have a unique
-identifier in this schema.
+Because the schema defines no unique identifier for `Company`, Dgraph does not
+generate a `getCompany` query. Running the original mutation again creates
+duplicate companies but not duplicate people, because `Person` has `xid` as a
+unique identifier while `Company` lacks one.
 
-Also, without having a unique identifier for each `Company`, you can't
-update a `Person` and set their employer to reference a pre-existing Company.
+Without a unique identifier for `Company`, you cannot update a `Person` to
+reference a pre-existing company as their employer.
