--- a/content/graphqlschema/3.md
+++ b/content/graphqlschema/3.md
@@ -9,26 +9,25 @@ courseName = "Schema"
 type = "graphql/schema"
 +++
 
-In the last lesson, we mentioned that the `Company` type doesn't have a unique
-identifier, so you can't run a pre-built `getCompany` query or reference a specific
-company uniquely to create edges to pre-existing nodes.
+The previous lesson showed that the `Company` type lacks a unique identifier,
+preventing you from running a `getCompany` query or referencing a specific
+company to create edges to pre-existing nodes.
 
-While this statement was true from the GraphQL API perspective, every node does
-have a unique identifier (UID) using the ID scalar, even if that identifier is 
-not mapped to a field within the GraphQL schema. UIDs prevent any two nodes from
-having the same UID, even if they are of different types.
+From the GraphQL API perspective this was true, but every node already has a
+unique identifier (UID) via the ID scalar, even when that identifier is not
+mapped to a field in the GraphQL schema. No two nodes share the same UID,
+regardless of type.
 
-Another change we are making to the schema here is adding a `hash` based search
-directive to the Company's name, and expanding the search directive on the
-Company's industry to be both `hash`-based and `term`-based.
+This schema update also adds a `hash` search directive to the Company's name and
+expands the search directive on the Company's industry to include both `hash` and
+`term` indexes.
 
-After pushing this change, any companies queried will then have the `id` field
-available for selection which will already be populated with the appropriate
-node UID.
+After you push this change, the `id` field becomes available on queried companies,
+already populated with the appropriate node UID.
 
 **Something to try**: After pushing this schema update, go back to the previous
 lesson using the **Back** button to find a query runner, and then try to query
-the `Company` type to see ids.
+the `Company` type to see IDs.
 
 {{% expandable %}}
 
@@ -79,6 +78,5 @@ mutation {
 }
 ```
 
-You might be interested to note that if you use the id of a `Company` with existing
-employees, the response to the above mutation will return all of the employees
-and not just Alice. {{% /expandable %}}
+If you use the ID of a `Company` with existing employees, the response returns
+all employees, not just Alice. {{% /expandable %}}
