--- a/content/graphqlschema/5.md
+++ b/content/graphqlschema/5.md
@@ -9,31 +9,25 @@ courseName = "Schema"
 type = "graphql"
 +++
 
-In the previous lesson, you saw a schema that includes two-way relationships or 
-bidirectional edges. Now, you can run some more advanced queries that use the
-bidirectional edges that you have set up so far in your database.
+The schema now includes bidirectional edges. These edges enable more advanced
+queries against your database.
 
-With balanced inverse relationships, you can query which company a specific person
-works for, and also query which employees work at a specific company.
+With balanced inverse relationships, you can query which company a person works
+for and which employees work at a given company.
 
-With a data graph that flows in both directions along these bidirectional edges,
-you can develop a multitude of applications. In this query we want to know who
-works for "Company ABC" without having to add extra edges. In the same operation,
-we are also getting a single person, Jack, and getting his employers.
+Bidirectional edges open up many application possibilities. This query finds who
+works for "Company ABC" without extra edges, and in the same operation retrieves
+Jack and his employers.
 
-The power of inverse relationships might not be very evident with this small
-example dataset. But, if you imagine a large dataset where you have thousands of
-people and thousands of companies, you can see how having only one-way
-relationships would make some queries less efficient.
+Inverse relationships show their full value at scale. With thousands of people
+and companies, one-way relationships force inefficient queries.
 
-On the topic of query efficiency, you should know that using the `@cascade`
-directive repeatedly in a query is not always the most efficient query method.
-This is because `@cascade` is a post-query filter run before results are returned,
-which causes all of the nodes to be read by the query even if they are removed
-from the response.
+A note on efficiency: repeated use of the `@cascade` directive can degrade query
+performance. `@cascade` filters results after the query reads all matching nodes,
+even those excluded from the response.
 
-The following queries return the same nodes as the query in the editor, but do
-so with less efficiency by repeatedly relying on the `@cascade` directive. 
+The following queries return the same nodes as the query in the editor, but less
+efficiently because they rely repeatedly on `@cascade`.
 
 ```
 {
@@ -56,5 +50,5 @@ so with less efficiency by repeatedly relying on the `@cascade` directive.
 }
 ```
 
-The query operation above uses the parameterized cascade syntax to require only
-specific fields.
+The query above uses parameterized cascade syntax to require only specific
+fields.
