--- a/content/graphqlsearch/2.md
+++ b/content/graphqlsearch/2.md
@@ -9,10 +9,9 @@ courseName = "Search"
 type = "graphql"
 +++
 
-To better illustrate the following examples, it will help to have some data that
-contains sentence-length strings.
+The following examples need data with sentence-length strings.
 
-You will note the presence of a few movie lines to make the examples interesting,
-along with the the characters and movies associated with these examples.
+This mutation loads a few movie lines, along with the characters and movies
+associated with them.
 
-Run the mutation provided here, and then continue to the next lesson.
+Run the mutation, then continue to the next lesson.
