--- a/content/graphqlsearch/5.md
+++ b/content/graphqlsearch/5.md
@@ -9,8 +9,7 @@ courseName = "Search"
 type = "graphql"
 +++
 
-With the `exact` index, inequalities on strings can be used in filters. Try
-running the query shown here to return lines that are alphabetically between "I"
-and "J".
+The `exact` index enables string inequality filters. Run the query here to
+return lines alphabetically between "I" and "J".
 
-The `hash` index lets you quickly filter for `eq` (equality) on strings.
+The `hash` index provides fast `eq` (equality) filtering on strings.
